Error pages: Break retain cycle NativeContent/StaticHTMLViewController

StaticHTMLViewController retains the generator.
The generator is implementated by ErrorPageContent, which retain the
StaticHTMLViewController.
This leads to a leak and the WKWebView is never released.

BUG=693178

Review-Url: https://codereview.chromium.org/2695593011
Cr-Commit-Position: refs/heads/master@{#451609}

Former-commit-id: fc155c2704ad95817d98efb4c3dbec239c4c17cb